fix: update article controller test